Css Mobile + animation fait à 100%

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
 
     <div class="chargement">
-        <div>oh</div>
-        <div>my</div>
-        <div>food</div>
+        <div class="chargement__bloc chargement__bloc--1" data-miroir="oh">oh</div>
+        <div class="chargement__bloc chargement__bloc--2" data-miroir="my">my</div>
+        <div class="chargement__bloc chargement__bloc--3" data-miroir="food">food</div>
     </div>
 
     <main>
@@ -166,7 +166,7 @@
 
         <footer class="footer">
 
-            <img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__logo">
+            <h2 class="footer__titre">ohmyfood</h2>
             <a href="" class="footer__link"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
             <a href="" class="footer__link"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
             <a href="" class="footer__link">Mentions légales</a>
