--- a/menu/a_la_francaise.html
+++ b/menu/a_la_francaise.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
 
         <a href="../index.html" class="header__retour"><i class="fa-solid fa-arrow-left"></i></a>
         <div class="header__logo">
@@ -209,9 +209,9 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
 
-        <img src="../public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__logo">
+        <h2 class="footer__titre">ohmyfood</h2>
         <a href="" class="footer__link"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
         <a href="" class="footer__link"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
         <a href="" class="footer__link">Mentions légales</a>
