--- a/menu/le_delice_des_sens.html
+++ b/menu/le_delice_des_sens.html
@@ -209,9 +209,9 @@
     </main>
 
 
-    <footer>
+    <footer class="footer">
 
-        <img src="../public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__logo">
+        <h2 class="footer__titre">ohmyfood</h2>
         <a href="" class="footer__link"><i class="fa-solid fa-utensils"></i> Proposer un restaurant</a>
         <a href="" class="footer__link"><i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a>
         <a href="" class="footer__link">Mentions légales</a>
