--- a/menu/la_note_enchantee.html
+++ b/menu/la_note_enchantee.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <header>
+    <header class="header">
 
         <a href="../index.html" class="header__retour"><i class="fa-solid fa-arrow-left"></i></a>
         <div class="header__logo">
